fix(micro-journey): fix Connection Band too long in Safari; not centered over Character in Chrome

--- a/packages/experimental/micro-journeys/src/two-character-layout.scss
+++ b/packages/experimental/micro-journeys/src/two-character-layout.scss
@@ -1,10 +1,22 @@
 @import '@bolt/core-v3.x';
 
+bolt-two-character-layout {
+  bolt-animate[slot^="character--"] {
+    flex: 1 0 100%;
+    width: 100%;
+  }
+}
+
 .c-bolt-two-character-layout {
   position: relative;
 
   &__character {
     position: relative;
+  }
+
+  bolt-animate[slot^="character--"] {
+    flex: 1 0 100%;
+    width: 100%;
   }
 
   &__initial {
@@ -24,6 +36,10 @@
 
     @include bolt-mq(small) {
       max-width: 500px;
+    }
+
+    @include bolt-mq(large) {
+      max-width: 550px;
     }
   }
 
@@ -50,9 +66,5 @@
       width: 100%;
       height: 100%;
     }
-  }
-
-  .c-bolt-character {
-
   }
 }
